--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>BUMIN EMS</title>
+<title>ILSAN CHA EMS</title>
 <link rel="apple-touch-icon" href="images/bumin_icon.png" />
 <link rel="apple-touch-startup-image" href="images/bumin_startup.png"/>
-<link rel="shortcut icon" href="images/favicon_bumin.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/favicon_cha.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.min.css"/>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 <link rel="stylesheet" href="css/common.css" />
@@ -42,7 +42,7 @@
 			<div id="main">
 				<div class="login_form">
 					<div class="lf_wrap">
-						<div class="login_logo"><img src="images/bumin_seoul_logo.png"></div>
+						<div class="login_logo"><img src="images/ilsan_cha_logo.png"></div>
 						<input type="text" class="login_input" placeholder="ID(email address)">
 						<input type="password" class="login_input2" placeholder="Password">
 						<div class="ck_box">
