vip항목 -> type항목으로 변경

--- a/cur_progress.html
+++ b/cur_progress.html
@@ -85,20 +85,20 @@
 							<table class="table table_02 table_02_s table_cur">
 								<thead>
 									<tr class="row">
-										<th class="col-3 col-sm-2 column column1">
+										<th class="col-2 col-sm-2 column column1">
 											<span class="th_number">No.</span>
 										</th>
-										<th class="col-1 col-sm-1 column column2">
-											<span class="th_vip">VIP</span>
+										<th class="col-3 col-sm-2 column column2">
+											<span class="th_type">TYPE</span>
 										</th>
-										<th class="col-4 col-sm-3 column column3">
+										<th class="col-3 col-sm-3 column column3">
 											<span class="th_reg">등록번호</span>
 										</th>
 										<th class="col-4 col-sm-3 column column4">
 											<span class="th_name">이름</span>
                                         </th>
                                         <th class="w-100"></th>
-                                        <th class="col-12 col-sm-3">
+                                        <th class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -112,20 +112,20 @@
 								</thead>
 								<tbody>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">1</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip">VIP</span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">외래</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">홍길동</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -137,20 +137,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">2</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">49285672</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">강석우</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -162,20 +162,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">3</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip">VIP</span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">외래</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">차마리</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -187,20 +187,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">4</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">김마리</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -212,20 +212,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">5</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">하진우</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -237,20 +237,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">6</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">하연희</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -262,20 +262,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">7</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">김빛나래</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -287,20 +287,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">8</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">달아달아달아</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -312,20 +312,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">9</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">푸르른달아</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -337,20 +337,20 @@
                                         </td>
 									</tr>
 									<tr class="row">
-										<td class="col-3 col-sm-2 column column1">
+										<td class="col-2 col-sm-2 column column1">
 											<span class="td_number">10</span>
 										</td>
-										<td class="col-1 col-sm-1 column column2">
-											<span class="td_vip"></span>
+										<td class="col-3 col-sm-2 column column2">
+											<span class="td_type">검진</span>
 										</td>
-										<td class="col-4 col-sm-3 column column3">
+										<td class="col-3 col-sm-3 column column3">
 											<span class="td_reg">02345678</span>
 										</td>
 										<td class="col-4 col-sm-3 column column4">
 											<span class="td_name">달고나</span>
                                         </td>
 										<td class="w-100"></td>
-                                        <td class="col-12 col-sm-3">
+                                        <td class="col-12 col-sm-2">
                                             <div class="row align-items-center column_wrap">
 												<div class="col-8 col_none column column5">
                                                     <span></span>
@@ -369,7 +369,7 @@
 										<tr class="row">
 											<th class="col-12 col-md-7 title">
                                                 <span class="name">홍길동2님</span>
-                                                <span class="state">(VIP종합검진)</span>
+                                                <span class="state">(외래종합검진)</span>
 											</th>
 											<th class="col-5 col-md-5 sub_wrap">
 												<div class="status">
